parser/y.output

state 0
	$accept: .spl_prog $end 

	GLOB  shift 2
	.  error

	spl_prog  goto 1

state 1
	$accept:  spl_prog.$end 

	$end  accept
	.  error


state 2
	spl_prog:  GLOB.LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	LBRACE  shift 3
	.  error


state 3
	spl_prog:  GLOB LBRACE.variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 
	variables: .    (2)

	IDENT  shift 6
	.  reduce 2 (src line 86)

	variables  goto 4
	var  goto 5

state 4
	spl_prog:  GLOB LBRACE variables.RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	RBRACE  shift 7
	.  error


state 5
	variables:  var.variables 
	variables: .    (2)

	IDENT  shift 6
	.  reduce 2 (src line 86)

	variables  goto 8
	var  goto 5

state 6
	var:  IDENT.    (4)

	.  reduce 4 (src line 91)


state 7
	spl_prog:  GLOB LBRACE variables RBRACE.PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	PROC  shift 9
	.  error


state 8
	variables:  var variables.    (3)

	.  reduce 3 (src line 88)


state 9
	spl_prog:  GLOB LBRACE variables RBRACE PROC.LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	LBRACE  shift 10
	.  error


state 10
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE.procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 
	procdefs: .    (6)

	IDENT  shift 14
	.  reduce 6 (src line 95)

	name  goto 13
	procdefs  goto 11
	pdef  goto 12

state 11
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs.RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	RBRACE  shift 15
	.  error


state 12
	procdefs:  pdef.procdefs 
	procdefs: .    (6)

	IDENT  shift 14
	.  reduce 6 (src line 95)

	name  goto 13
	procdefs  goto 16
	pdef  goto 12

state 13
	pdef:  name.LPAREN param RPAREN LBRACE body RBRACE 

	LPAREN  shift 17
	.  error


state 14
	name:  IDENT.    (5)

	.  reduce 5 (src line 93)


state 15
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE.FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	FUNC  shift 18
	.  error


state 16
	procdefs:  pdef procdefs.    (7)

	.  reduce 7 (src line 97)


state 17
	pdef:  name LPAREN.param RPAREN LBRACE body RBRACE 
	maxthree: .    (14)

	IDENT  shift 6
	.  reduce 14 (src line 122)

	var  goto 21
	param  goto 19
	maxthree  goto 20

state 18
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC.LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE 

	LBRACE  shift 22
	.  error


state 19
	pdef:  name LPAREN param.RPAREN LBRACE body RBRACE 

	RPAREN  shift 23
	.  error


state 20
	param:  maxthree.    (13)

	.  reduce 13 (src line 120)


state 21
	maxthree:  var.    (15)
	maxthree:  var.var 
	maxthree:  var.var var 

	IDENT  shift 6
	.  reduce 15 (src line 124)

	var  goto 24

state 22
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE.funcdefs RBRACE MAIN LBRACE mainprog RBRACE 
	funcdefs: .    (9)

	IDENT  shift 14
	.  reduce 9 (src line 105)

	name  goto 27
	funcdefs  goto 25
	fdef  goto 26

state 23
	pdef:  name LPAREN param RPAREN.LBRACE body RBRACE 

	LBRACE  shift 28
	.  error


state 24
	maxthree:  var var.    (16)
	maxthree:  var var.var 

	IDENT  shift 6
	.  reduce 16 (src line 125)

	var  goto 29

state 25
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs.RBRACE MAIN LBRACE mainprog RBRACE 

	RBRACE  shift 30
	.  error


state 26
	funcdefs:  fdef.funcdefs 
	funcdefs: .    (9)

	IDENT  shift 14
	.  reduce 9 (src line 105)

	name  goto 27
	funcdefs  goto 31
	fdef  goto 26

state 27
	fdef:  name.LPAREN param RPAREN LBRACE body RETURN atom RBRACE 

	LPAREN  shift 32
	.  error


state 28
	pdef:  name LPAREN param RPAREN LBRACE.body RBRACE 

	LOCAL  shift 34
	.  error

	body  goto 33

state 29
	maxthree:  var var var.    (17)

	.  reduce 17 (src line 126)


state 30
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE.MAIN LBRACE mainprog RBRACE 

	MAIN  shift 35
	.  error


state 31
	funcdefs:  fdef funcdefs.    (10)

	.  reduce 10 (src line 107)


state 32
	fdef:  name LPAREN.param RPAREN LBRACE body RETURN atom RBRACE 
	maxthree: .    (14)

	IDENT  shift 6
	.  reduce 14 (src line 122)

	var  goto 21
	param  goto 36
	maxthree  goto 20

state 33
	pdef:  name LPAREN param RPAREN LBRACE body.RBRACE 

	RBRACE  shift 37
	.  error


state 34
	body:  LOCAL.LBRACE maxthree RBRACE algo 

	LBRACE  shift 38
	.  error


state 35
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN.LBRACE mainprog RBRACE 

	LBRACE  shift 39
	.  error


state 36
	fdef:  name LPAREN param.RPAREN LBRACE body RETURN atom RBRACE 

	RPAREN  shift 40
	.  error


state 37
	pdef:  name LPAREN param RPAREN LBRACE body RBRACE.    (8)

	.  reduce 8 (src line 100)


state 38
	body:  LOCAL LBRACE.maxthree RBRACE algo 
	maxthree: .    (14)

	IDENT  shift 6
	.  reduce 14 (src line 122)

	var  goto 21
	maxthree  goto 41

state 39
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE.mainprog RBRACE 

	VAR  shift 43
	.  error

	mainprog  goto 42

state 40
	fdef:  name LPAREN param RPAREN.LBRACE body RETURN atom RBRACE 

	LBRACE  shift 44
	.  error


state 41
	body:  LOCAL LBRACE maxthree.RBRACE algo 

	RBRACE  shift 45
	.  error


state 42
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog.RBRACE 

	RBRACE  shift 46
	.  error


state 43
	mainprog:  VAR.LBRACE variables RBRACE algo 

	LBRACE  shift 47
	.  error


state 44
	fdef:  name LPAREN param RPAREN LBRACE.body RETURN atom RBRACE 

	LOCAL  shift 34
	.  error

	body  goto 48

state 45
	body:  LOCAL LBRACE maxthree RBRACE.algo 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  error

	var  goto 58
	name  goto 53
	algo  goto 49
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 46
	spl_prog:  GLOB LBRACE variables RBRACE PROC LBRACE procdefs RBRACE FUNC LBRACE funcdefs RBRACE MAIN LBRACE mainprog RBRACE.    (1)

	.  reduce 1 (src line 74)


state 47
	mainprog:  VAR LBRACE.variables RBRACE algo 
	variables: .    (2)

	IDENT  shift 6
	.  reduce 2 (src line 86)

	variables  goto 62
	var  goto 5

state 48
	fdef:  name LPAREN param RPAREN LBRACE body.RETURN atom RBRACE 

	RETURN  shift 63
	.  error


state 49
	body:  LOCAL LBRACE maxthree RBRACE algo.    (12)

	.  reduce 12 (src line 115)


state 50
	algo:  instr.SEMICOLON 
	algo:  instr.SEMICOLON algo 

	SEMICOLON  shift 64
	.  error


state 51
	instr:  HALT.    (23)

	.  reduce 23 (src line 144)


state 52
	instr:  PRINT.output 

	IDENT  shift 6
	NUMBER  shift 69
	STRING  shift 67
	.  error

	var  goto 68
	atom  goto 66
	output  goto 65

state 53
	instr:  name.LPAREN input RPAREN 

	LPAREN  shift 70
	.  error


state 54
	instr:  assign.    (26)

	.  reduce 26 (src line 148)


state 55
	instr:  loop.    (27)

	.  reduce 27 (src line 149)


state 56
	instr:  branch.    (28)

	.  reduce 28 (src line 150)


state 57
	var:  IDENT.    (4)
	name:  IDENT.    (5)

	LPAREN  reduce 5 (src line 93)
	.  reduce 4 (src line 91)


state 58
	assign:  var.ASSIGN name LPAREN input RPAREN 
	assign:  var.ASSIGN term 

	ASSIGN  shift 71
	.  error


state 59
	loop:  WHILE.term LBRACE algo RBRACE 

	LPAREN  shift 74
	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 73
	term  goto 72

state 60
	loop:  DO.LBRACE algo RBRACE UNTIL term 

	LBRACE  shift 75
	.  error


state 61
	branch:  IF.term LBRACE algo RBRACE 
	branch:  IF.term LBRACE algo RBRACE ELSE LBRACE algo RBRACE 

	LPAREN  shift 74
	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 73
	term  goto 76

state 62
	mainprog:  VAR LBRACE variables.RBRACE algo 

	RBRACE  shift 77
	.  error


state 63
	fdef:  name LPAREN param RPAREN LBRACE body RETURN.atom RBRACE 

	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 78

state 64
	algo:  instr SEMICOLON.    (21)
	algo:  instr SEMICOLON.algo 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  reduce 21 (src line 139)

	var  goto 58
	name  goto 53
	algo  goto 79
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 65
	instr:  PRINT output.    (24)

	.  reduce 24 (src line 146)


state 66
	output:  atom.    (35)

	.  reduce 35 (src line 168)


state 67
	output:  STRING.    (36)

	.  reduce 36 (src line 170)


state 68
	atom:  var.    (19)

	.  reduce 19 (src line 134)


state 69
	atom:  NUMBER.    (20)

	.  reduce 20 (src line 136)


state 70
	instr:  name LPAREN.input RPAREN 
	input: .    (37)

	IDENT  shift 6
	NUMBER  shift 69
	.  reduce 37 (src line 173)

	var  goto 68
	atom  goto 81
	input  goto 80

state 71
	assign:  var ASSIGN.name LPAREN input RPAREN 
	assign:  var ASSIGN.term 

	LPAREN  shift 74
	IDENT  shift 57
	NUMBER  shift 69
	.  error

	var  goto 68
	name  goto 82
	atom  goto 73
	term  goto 83

state 72
	loop:  WHILE term.LBRACE algo RBRACE 

	LBRACE  shift 84
	.  error


state 73
	term:  atom.    (41)

	.  reduce 41 (src line 180)


state 74
	term:  LPAREN.unop term RPAREN 
	term:  LPAREN.term binop term RPAREN 

	LPAREN  shift 74
	NEG  shift 87
	NOT  shift 88
	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 73
	term  goto 86
	unop  goto 85

state 75
	loop:  DO LBRACE.algo RBRACE UNTIL term 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  error

	var  goto 58
	name  goto 53
	algo  goto 89
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 76
	branch:  IF term.LBRACE algo RBRACE 
	branch:  IF term.LBRACE algo RBRACE ELSE LBRACE algo RBRACE 

	LBRACE  shift 90
	.  error


state 77
	mainprog:  VAR LBRACE variables RBRACE.algo 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  error

	var  goto 58
	name  goto 53
	algo  goto 91
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 78
	fdef:  name LPAREN param RPAREN LBRACE body RETURN atom.RBRACE 

	RBRACE  shift 92
	.  error


state 79
	algo:  instr SEMICOLON algo.    (22)

	.  reduce 22 (src line 141)


state 80
	instr:  name LPAREN input.RPAREN 

	RPAREN  shift 93
	.  error


state 81
	input:  atom.    (38)
	input:  atom.atom 
	input:  atom.atom atom 

	IDENT  shift 6
	NUMBER  shift 69
	.  reduce 38 (src line 175)

	var  goto 68
	atom  goto 94

state 82
	assign:  var ASSIGN name.LPAREN input RPAREN 

	LPAREN  shift 95
	.  error


state 83
	assign:  var ASSIGN term.    (30)

	.  reduce 30 (src line 155)


state 84
	loop:  WHILE term LBRACE.algo RBRACE 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  error

	var  goto 58
	name  goto 53
	algo  goto 96
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 85
	term:  LPAREN unop.term RPAREN 

	LPAREN  shift 74
	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 73
	term  goto 97

state 86
	term:  LPAREN term.binop term RPAREN 

	EQ  shift 99
	GT  shift 100
	OR  shift 101
	AND  shift 102
	PLUS  shift 103
	MINUS  shift 104
	MULT  shift 105
	DIV  shift 106
	.  error

	binop  goto 98

state 87
	unop:  NEG.    (44)

	.  reduce 44 (src line 186)


state 88
	unop:  NOT.    (45)

	.  reduce 45 (src line 188)


state 89
	loop:  DO LBRACE algo.RBRACE UNTIL term 

	RBRACE  shift 107
	.  error


state 90
	branch:  IF term LBRACE.algo RBRACE 
	branch:  IF term LBRACE.algo RBRACE ELSE LBRACE algo RBRACE 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  error

	var  goto 58
	name  goto 53
	algo  goto 108
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 91
	mainprog:  VAR LBRACE variables RBRACE algo.    (18)

	.  reduce 18 (src line 129)


state 92
	fdef:  name LPAREN param RPAREN LBRACE body RETURN atom RBRACE.    (11)

	.  reduce 11 (src line 110)


state 93
	instr:  name LPAREN input RPAREN.    (25)

	.  reduce 25 (src line 147)


state 94
	input:  atom atom.    (39)
	input:  atom atom.atom 

	IDENT  shift 6
	NUMBER  shift 69
	.  reduce 39 (src line 176)

	var  goto 68
	atom  goto 109

state 95
	assign:  var ASSIGN name LPAREN.input RPAREN 
	input: .    (37)

	IDENT  shift 6
	NUMBER  shift 69
	.  reduce 37 (src line 173)

	var  goto 68
	atom  goto 81
	input  goto 110

state 96
	loop:  WHILE term LBRACE algo.RBRACE 

	RBRACE  shift 111
	.  error


state 97
	term:  LPAREN unop term.RPAREN 

	RPAREN  shift 112
	.  error


state 98
	term:  LPAREN term binop.term RPAREN 

	LPAREN  shift 74
	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 73
	term  goto 113

state 99
	binop:  EQ.    (46)

	.  reduce 46 (src line 191)


state 100
	binop:  GT.    (47)

	.  reduce 47 (src line 193)


state 101
	binop:  OR.    (48)

	.  reduce 48 (src line 194)


state 102
	binop:  AND.    (49)

	.  reduce 49 (src line 195)


state 103
	binop:  PLUS.    (50)

	.  reduce 50 (src line 196)


state 104
	binop:  MINUS.    (51)

	.  reduce 51 (src line 197)


state 105
	binop:  MULT.    (52)

	.  reduce 52 (src line 198)


state 106
	binop:  DIV.    (53)

	.  reduce 53 (src line 199)


state 107
	loop:  DO LBRACE algo RBRACE.UNTIL term 

	UNTIL  shift 114
	.  error


state 108
	branch:  IF term LBRACE algo.RBRACE 
	branch:  IF term LBRACE algo.RBRACE ELSE LBRACE algo RBRACE 

	RBRACE  shift 115
	.  error


state 109
	input:  atom atom atom.    (40)

	.  reduce 40 (src line 177)


state 110
	assign:  var ASSIGN name LPAREN input.RPAREN 

	RPAREN  shift 116
	.  error


state 111
	loop:  WHILE term LBRACE algo RBRACE.    (31)

	.  reduce 31 (src line 158)


state 112
	term:  LPAREN unop term RPAREN.    (42)

	.  reduce 42 (src line 182)


state 113
	term:  LPAREN term binop term.RPAREN 

	RPAREN  shift 117
	.  error


state 114
	loop:  DO LBRACE algo RBRACE UNTIL.term 

	LPAREN  shift 74
	IDENT  shift 6
	NUMBER  shift 69
	.  error

	var  goto 68
	atom  goto 73
	term  goto 118

state 115
	branch:  IF term LBRACE algo RBRACE.    (33)
	branch:  IF term LBRACE algo RBRACE.ELSE LBRACE algo RBRACE 

	ELSE  shift 119
	.  reduce 33 (src line 163)


state 116
	assign:  var ASSIGN name LPAREN input RPAREN.    (29)

	.  reduce 29 (src line 153)


state 117
	term:  LPAREN term binop term RPAREN.    (43)

	.  reduce 43 (src line 183)


state 118
	loop:  DO LBRACE algo RBRACE UNTIL term.    (32)

	.  reduce 32 (src line 160)


state 119
	branch:  IF term LBRACE algo RBRACE ELSE.LBRACE algo RBRACE 

	LBRACE  shift 120
	.  error


state 120
	branch:  IF term LBRACE algo RBRACE ELSE LBRACE.algo RBRACE 

	HALT  shift 51
	PRINT  shift 52
	WHILE  shift 59
	DO  shift 60
	IF  shift 61
	IDENT  shift 57
	.  error

	var  goto 58
	name  goto 53
	algo  goto 121
	instr  goto 50
	assign  goto 54
	loop  goto 55
	branch  goto 56

state 121
	branch:  IF term LBRACE algo RBRACE ELSE LBRACE algo.RBRACE 

	RBRACE  shift 122
	.  error


state 122
	branch:  IF term LBRACE algo RBRACE ELSE LBRACE algo RBRACE.    (34)

	.  reduce 34 (src line 165)


36 terminals, 24 nonterminals
54 grammar rules, 123/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
73 working sets used
memory: parser 143/240000
24 extra closures
144 shift entries, 2 exceptions
69 goto entries
51 entries saved by goto default
Optimizer space used: output 146/240000
146 table entries, 0 zero
maximum spread: 36, maximum offset: 120
